--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -7,8 +7,9 @@
     <ImageView
         android:id="@+id/item_iv_pic"
         android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@color/gray_dark" />
+        android:layout_height="70dp"
+        android:scaleType="centerCrop"
+        android:background="@color/gray_light" />
 
     <TextView
         android:id="@+id/item_tv_title"
