--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,8 +10,9 @@
         android:id="@+id/item_iv_pic"
         android:layout_width="90dp"
         android:layout_height="70dp"
+        android:background="@color/gray_light"
         android:scaleType="centerCrop"
-        android:background="@color/gray_light" />
+        android:src="@mipmap/test" />
 
     <TextView
         android:id="@+id/item_tv_title"
@@ -19,7 +22,6 @@
         android:layout_toRightOf="@+id/item_iv_pic"
         android:padding="6dp"
         android:textColor="@color/gray_dark"
-        android:textSize="16sp" />
-
+        android:textSize="@dimen/font_size_middle" />
 
 </RelativeLayout>
