--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="window_color">#FFFFFF</color>
+    <color name="window_color">#f9f9f9</color>
     <color name="main_color">#4886f3</color>
     <color name="item_selected_bg_color">#20000000</color>
 
     <color name="gray_light">#aaaaaa</color>
     <color name="gray_middle">#666666</color>
     <color name="gray_dark">#333333</color>
+
+    <color name="gray_light_p50">#26aaaaaa</color>
 
 </resources>
