--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground"
-    android:padding="@dimen/default_padding">
+    <data>
 
-    <ImageView
-        android:id="@+id/item_iv_pic"
-        android:layout_width="90dp"
-        android:layout_height="70dp"
-        android:background="@color/gray_light"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/test" />
+        <variable
+            name="story"
+            type="com.liuguangqiang.idaily.entity.Story" />
+    </data>
 
-    <TextView
-        android:id="@+id/item_tv_title"
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/item_iv_pic"
-        android:padding="6dp"
-        android:textColor="@color/gray_dark"
-        android:textSize="@dimen/font_size_middle"
-        tools:text="Hello world" />
+        android:background="?android:selectableItemBackground"
+        android:padding="@dimen/default_padding">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/item_iv_pic"
+            android:layout_width="90dp"
+            android:layout_height="70dp"
+            android:background="@color/gray_light"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/test"
+            app:imageUrl="@{story.images.get(0)}" />
+
+        <TextView
+            android:id="@+id/item_tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/item_iv_pic"
+            android:padding="6dp"
+            android:text="@{story.title}"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/font_size_middle"
+            tools:text="Hello world" />
+
+    </RelativeLayout>
+
+</layout>
