updated res files.

--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="storyViewModel"
-            type="com.liuguangqiang.idaily.viewmodel.StoryViewModel" />
+            type="com.liuguangqiang.idaily.ui.viewmodel.StoryViewModel" />
     </data>
 
     <LinearLayout
