--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.liuguangqiang.idaily.viewmodel.MainViewModel" />
+            type="com.liuguangqiang.idaily.ui.viewmodel.MainViewModel" />
 
     </data>
 
@@ -39,12 +39,11 @@
                     app:expandedTitleMarginStart="50dp"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                    <ImageView
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/vp_top_stories"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fitsSystemWindows="true"
-                        android:scaleType="centerCrop"
-                        android:src="@mipmap/test"
                         app:layout_collapseMode="parallax"
                         app:layout_scrollFlags="scroll|enterAlways" />
 
@@ -60,7 +59,7 @@
 
             </android.support.design.widget.AppBarLayout>
 
-            <com.liuguangqiang.idaily.widget.PageableRecyclerView
+            <com.liuguangqiang.idaily.ui.widget.PageableRecyclerView
                 android:id="@+id/rv_news"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
