--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -6,32 +6,32 @@
         <item
             android:id="@+id/navi_item_1"
             android:icon="@mipmap/ic_menu"
-            android:title="Dashboard" />
+            android:title="首页" />
 
         <item
             android:id="@+id/navi_item_2"
             android:icon="@mipmap/ic_menu"
-            android:title="Favorite" />
+            android:title="收藏" />
 
         <item
             android:id="@+id/navi_item_3"
             android:icon="@mipmap/ic_menu"
-            android:title="Card Travel" />
+            android:title="专题" />
 
     </group>
 
-    <item android:title="Shopping">
+    <item android:title="其他">
 
         <menu>
             <item
                 android:id="@+id/navi_item_4"
                 android:icon="@mipmap/ic_menu"
-                android:title="Shopping Cart" />
+                android:title="消息" />
 
             <item
                 android:id="@+id/navi_item_5"
                 android:icon="@mipmap/ic_menu"
-                android:title="Payment" />
+                android:title="设置" />
         </menu>
 
     </item>
