--- a/app/src/main/res/layout/fragment_top_story.xml
+++ b/app/src/main/res/layout/fragment_top_story.xml
@@ -18,8 +18,18 @@
             android:layout_height="256dp"
             android:background="@color/gray_light"
             android:scaleType="centerCrop"
-            app:imageUrl="@{viewModel.image}"
-            app:onClickListener="@{viewModel.picClickListener}" />
+            app:imageUrl="@{viewModel.image}" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/shadow_layer_top" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@mipmap/shadow_layer_bottom" />
 
     </RelativeLayout>
 
