--- a/app/src/main/res/layout/header_nav.xml
+++ b/app/src/main/res/layout/header_nav.xml
@@ -1,16 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:background="@color/main_color"
+    android:background="@color/colorPrimary"
     android:clickable="true"
     android:padding="16dp">
 
-    <ImageView
+    <TextView
         android:id="@+id/iv_avatar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/tv_username"
-        android:background="@mipmap/ic_launcher" />
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="48sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_username"
@@ -18,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
-        android:text="Hi ! I'm Eric !"
+        android:text="Unofficial Zhihu Daily"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
