--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -6,13 +6,13 @@
 
         <variable
             name="story"
-            type="com.liuguangqiang.idaily.entity.Story" />
+            type="com.liuguangqiang.idaily.domain.entity.Story" />
     </data>
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:selectableItemBackground"
+        android:background="@drawable/rv_selector"
         android:padding="@dimen/default_padding">
 
         <ImageView
@@ -21,8 +21,7 @@
             android:layout_height="70dp"
             android:background="@color/gray_light"
             android:scaleType="centerCrop"
-            android:src="@mipmap/test"
-            app:imageUrl="@{story.images.get(0)}" />
+            app:imageUrl="@{story.images[0]}" />
 
         <TextView
             android:id="@+id/item_tv_title"
@@ -33,7 +32,7 @@
             android:padding="6dp"
             android:text="@{story.title}"
             android:textColor="@color/gray_dark"
-            android:textSize="@dimen/font_size_middle"
+            android:textSize="@dimen/font_size_big"
             tools:text="Hello world" />
 
     </RelativeLayout>
