--- a/app/src/main/res/layout/fragment_top_story.xml
+++ b/app/src/main/res/layout/fragment_top_story.xml
@@ -18,7 +18,8 @@
             android:layout_height="256dp"
             android:background="@color/gray_light"
             android:scaleType="centerCrop"
-            app:imageUrl="@{viewModel.image}" />
+            app:imageUrl="@{viewModel.image}"
+            app:onClickListener="@{viewModel.picClickListener}" />
 
         <ImageView
             android:layout_width="match_parent"
