--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                         app:layout_scrollFlags="scroll|enterAlways">
 
                         <android.support.v4.view.ViewPager
-                            android:id="@+id/vp_top_stories"
+                            android:id="@+id/view_pager"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
 
